--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
-	background-color: asbestos;
+	background-color: #3498db;
 }
 
 
